# GovMateAI

./: .env.example  .gitignore  .vercelignore  CLOUDDEPLOYMENT.md  DATAFLOW.md  EVALUATION.md  QUICKSTART.md  README.md  WALKTHROUGH.md  pyproject.toml  requirements.txt  ruff.toml  vercel.json
api/: asgi.py
backend/: main.py
backend/api/: deps.py  router.py
backend/api/endpoints/: chat.py  health.py  suggestions.py
backend/core/: config.py  database.py
backend/ingestion/: pipeline.py
backend/ingestion/chunkers/: markdown_chunker.py
backend/ingestion/crawlers/: base.py
backend/ingestion/embedders/: local_embedder.py
backend/ingestion/processors/: html_parser.py
backend/models/: qdrant_payload.py  schemas.py
backend/rag/: citation_formatter.py  judge.py  metrics.py  orchestrator.py  prompt_builder.py  query_rewriter.py  reranker.py  retriever.py  session_store.py
datasets/: llm_calls.json  seeds.yaml  sessions.json
docker/: Dockerfile  docker-compose.yml
frontend/templates/: base.html  index.html
frontend/templates/components/: citation_card.html  suggestion_chips.html
monitoring/: dashboard.py
scripts/: inspect_collection.py  run_eval.py  run_ingestion.py  simulate_parse.py  trace_query.py
