[project]
name = "govmate-ai"
version = "0.1.0"
description = "Australian Government RAG Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "qdrant-client>=1.9.0",
    "openai>=1.0.0",
    "langchain-text-splitters>=1.1.0",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "markdownify>=0.11.0",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "fastembed>=0.3.0",
    "sentence-transformers>=2.5.0",
    "tenacity>=8.2.0",
    "psycopg2-binary>=2.9.0",
    "PyYAML>=6.0",
    "langchain-text-splitters>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
